samples/_failures_safe/1761043716_ee13ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87876ffb.c: In function ‘main’:
./samples/SAFE/__tmp_87876ffb.c:180:17: error: expected declaration or statement at end of input
  180 |                 }
      |                 ^
./samples/SAFE/__tmp_87876ffb.c:180:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87876ffb.c:180:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87876ffb.c:180:17: error: expected declaration or statement at end of input
